<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

     <item android:id="@+id/openbluetooth"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          android:orderInCategory="1"  
          android:title="@string/openbluetooth" /> 
    <item android:id="@+id/scan"
          android:icon="@android:drawable/ic_menu_myplaces"
          android:orderInCategory="2"  
          android:title="@string/connect" />
    <item android:id="@+id/discoverable"
          android:icon="@android:drawable/ic_menu_view"
          android:orderInCategory="3"  
          android:title="@string/discoverable" />
     <item android:id="@+id/closebluetooth"
          android:icon="@android:drawable/ic_menu_revert"
          android:orderInCategory="3"  
          android:title="@string/closebluetooth" />   
            
     <item android:id="@+id/record"
          android:icon="@android:drawable/ic_menu_month"
          android:orderInCategory="3"  
          android:title="@string/record" /> 
    <item android:id="@+id/exit"
          android:icon="@android:drawable/ic_menu_set_as"
          android:orderInCategory="3"  
          android:title="@string/exit" />
         
</menu>
